# pdfcompress

./: .gitignore  README.md  publish.bat  pyproject.toml
app/: compressor.py  main.py
app/templates/: index.html
scripts/: install-background-task.ps1  remove-background-task.ps1  start-app.ps1
static/: style.css
tests/: conftest.py  test_api.py  test_compressor.py
