[project]
name = "pdfcompress"
version = "0.1.0"
description = "Einfache Webanwendung zum Komprimieren von PDF-Dateien"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139",
    "uvicorn>=0.49",
    "python-multipart>=0.0.32",
    "pikepdf>=10",
    "pillow>=12",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
